approve or reject request joins domain

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -63,10 +63,13 @@ en:
     error_user_not_found: "User not found!"
     error_products_not_found: "Products not found!"
     success: "Succes"
+    error: "Error"
     logout: "Log out success!"
     not_found_order: "Order not found!"
     can_not_cancel_order: "Can not cancel order!"
     change_status_domain_fail: "Change status of domain failed!"
+    status_not_exist: "Status not exist!"
+    not_owner_domain: "あなたはこのドメインの所有者ではありません!"
   framgia_label: "Framgia"
   image_index: "Picture"
   feature_index: "Features"
