--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -66,10 +66,13 @@ ja:
     error_user_not_found: "ユーザーが見つかりません!"
     error_products_not_found: "プロダクトが見つかりません!"
     success: "成功する"
+    error: "エラー"
     logout: "ログアウトが成功する!"
     not_found_order: "オーダが見つかりません!"
     can_not_cancel_order: "オーダをキャンセルすることはできません!"
     change_status_domain_fail: "ドメインのステータスを変更できませんでした!"
+    status_not_exist: "ステータスが存在しません!"
+    not_owner_domain: "あなたはこのドメインの所有者ではありません!"
   framgia_label: "Framgia"
   image_index: "画像"
   feature_index: "特長"
