--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -103,10 +103,13 @@ vi:
     error_user_not_found: "Không tìm thấy người dùng!"
     error_products_not_found: "Không tìm thấy sản phẩm!"
     success: "OK"
+    error: "Lỗi"
     logout: "Đăng xuất thành công!"
     not_found_order: "Không tìm thấy đơn hàng!"
     can_not_cancel_order: "Không thể hủy đơn hàng!"
     change_status_domain_fail: "Thay đổi trạng thái miền thất bại!"
+    status_not_exist: "Trạng thái không tồn tại!"
+    not_owner_domain: "Bạn không phải là chủ miền này!"
   framgia_label: "Framgia"
   image_index: "Hình ảnh"
   feature_index: "Tính năng"
